# seniorapp

./: .gitignore  PRD_SeniorVoiceAssistant.md  gradle.properties  settings.gradle.kts
app/: build.gradle  build.gradle.kts
app/src/androidTest/java/com/example/seniorapp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: download_models.sh
app/src/main/cpp/: CMakeLists.txt  seniorapp-native.cpp  whisper-jni.cpp  whisper-jni.h
app/src/main/java/com/example/seniorapp/: MainActivity.kt  SeniorApp.kt
app/src/main/java/com/example/seniorapp/data/: AppDatabase.kt  Converters.kt  Memory.kt  MemoryDao.kt  MemoryRepository.kt  Transcription.kt  TranscriptionDao.kt
app/src/main/java/com/example/seniorapp/service/: AudioRecorder.kt  EmergencyContactManager.kt  ImportanceAnalyzer.kt  MedicationReminderManager.kt  MedicationReminderReceiver.kt  NativeInterface.kt  ParaformerTranscriber.kt  SherpaNcnnRecognizer.kt  TranscriptionWorker.kt  VoiceActivityDetector.kt  VoiceAssistant.kt  VoiceCommandProcessor.kt  VoiceProcessingService.kt  VoiceRecorderService.kt  WhisperTranscriber.kt
app/src/main/java/com/example/seniorapp/ui/: MainActivity.kt  MainViewModel.kt
app/src/main/res/drawable/: ic_remove.xml
app/src/main/res/layout/: activity_calibration.xml  activity_main.xml  item_memory.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/seniorapp/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
